force-app/main/default/objects/Answer_Option__c/Answer_Option__c.object-meta.xml
<CustomObject>
    <description>An answer option attached to a Question. Carries the graph edge via Next_Question__c.</description>
    <label>Answer Option</label>
    <nameField>
        <displayFormat>AO-{00000}</displayFormat>
        <label>Answer Option Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answer Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>