force-app/main/default/objects/Answer_Option__c/fields/Allows_Free_Text__c.field-meta.xml
<CustomField>
    <fullName>Allows_Free_Text__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, picking this option also opens a free-text input (the classic "Other: ___" pattern).</description>
    <label>Allows Free Text</label>
    <type>Checkbox</type>
</CustomField>