force-app/main/default/objects/Answer_Option__c/fields/Free_Text_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Free_Text_Error_Message__c</fullName>
    <description>Configurable error message shown when Free_Text_Regex__c does not match.</description>
    <label>Free Text Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>