force-app/main/default/objects/Answer_Option__c/fields/Free_Text_Regex__c.field-meta.xml
<CustomField>
    <fullName>Free_Text_Regex__c</fullName>
    <description>Regex applied to the free-text companion of this option when Allows_Free_Text__c is true.</description>
    <label>Free Text Regex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>