force-app/main/default/objects/Answer_Option__c/fields/Next_Question__c.field-meta.xml
<CustomField>
    <fullName>Next_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The graph edge: the question the respondent is routed to after picking this option. Empty = terminal branch (end of survey, show theme closing message).</description>
    <label>Next Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Incoming Edges</relationshipLabel>
    <relationshipName>Incoming_Edges</relationshipName>
    <type>Lookup</type>
</CustomField>