force-app/main/default/objects/Answer_Option__c/fields/Option_Text__c.field-meta.xml
<CustomField>
    <fullName>Option_Text__c</fullName>
    <description>The label of this answer option shown to the respondent.</description>
    <label>Option Text</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>